SOE-2294: removed fix for extra space below hero banner.

--- a/scss/components/_soe_images.scss
+++ b/scss/components/_soe_images.scss
@@ -54,14 +54,9 @@
       @include breakpoint-max(medium) {
         height: auto;
       }
+      
       .logged-in & {
         height: calc(100vh - 235px);
-        @include breakpoint-max(small) {
-          height: calc(100vh - 230px);
-        }
-        @include breakpoint-max(x-small) {
-          height: calc(100vh - 235px);
-        }
       }
     }
   }
